// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: false, isHidden: false and hasValue: false 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: false, isHidden: true and hasValue: false 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": "Empty value",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: true, isHidden: false and hasValue: false 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() > should return correct aria attributes for isSelected: true, isDisabled: true, isHidden: true and hasValue: true 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": "true",
  "aria-label": null,
}
`;
